Fixed up spacing between boxes and padding

--- a/style.css
+++ b/style.css
@@ -163,8 +163,8 @@ body {
     text-align: center;
     font-size: 25px;
     border-radius: 30px;
-    margin: 10% 10% 10% 10%;
-    padding: 2.5% 2.5% 2.5% 2.5%;
+    margin: 5% 10%;
+    padding: 1% 2.5%;
     color:rgb(10, 60, 10);
     background-color: rgb(180,255,180);
     border-style:solid;
@@ -198,8 +198,8 @@ body {
     font-family: sans-serif;
     font-size: 25px;
     border-radius: 30px;
-    margin: 10% 10% 10% 10%;
-    padding: 2.5% 2.5% 2.5% 2.5%;
+    margin: 5% 10%;
+    padding: 1% 2.5%;
     color:rgb(80, 80, 10);
     background-color: rgb(255,255,180);
     border-style:solid;
@@ -226,8 +226,8 @@ body {
     text-align: center;
     font-size: 25px;
     border-radius: 30px;
-    margin: 10% 10% 10% 10%;
-    padding: 2.5% 2.5% 2.5% 2.5%;
+    margin: 5% 10%;
+    padding: 1% 2.5%;
     color:rgb(80,50, 10);
     background-color: rgb(255,180,100);
     border-style:solid;
@@ -255,8 +255,8 @@ body {
     text-align: center;
     font-size: 25px;
     border-radius: 30px;
-    margin: 10% 10% 10% 10%;
-    padding: 2.5% 2.5% 2.5% 2.5%;
+    margin: 5% 10% 10%;
+    padding: 1% 2.5%;
     color:rgb(10, 80, 80);
     background-color: rgb(180,255,255);
     border-style:solid;
